--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <title>Next Break From School</title>
+    <link rel="icon" type="image/x-icon" href="https://imageio.forbes.com/specials-images/imageserve/5d52d1ad2d95e3000804cc8e/0x0.jpg?format=jpg&crop=416,416,x0,y0,safe&height=87&width=87">
 <style>
 body {
     background-color: #c20d00;
